fix horizontal scroll

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -73,7 +73,6 @@ body{
 	letter-spacing: .5px;
 	background: $seashell;
 	color: $cacao;
-	overflow-x: hidden;
 }
 
 a{
@@ -96,7 +95,7 @@ img{
 header{
 	padding: $gutter;
 	margin-bottom: 0;
-	width: 100vw;
+	width: 100%;
 	position: fixed;
 	top: 0;
 	z-index: 100;
@@ -144,7 +143,7 @@ nav{
 }
 
 section{
-	width: 100vw;
+	width: 100%;
 	position: relative;
 	min-height: 100vh;
 	z-index: 10;
@@ -274,7 +273,7 @@ p{
 		position: absolute;
 		top: 0;
 		left: 0;
-		width: 100vw;
+		width: 100%;
 		height: 100vh;
 		background-attachment: fixed;
 		background-size: cover;
@@ -463,7 +462,7 @@ p{
 
 .scene{
 	height: 100%;
-	width: 100vw;
+	width: 100%;
 	overflow: hidden;
 	position: fixed;
 	top: 0;
@@ -724,11 +723,11 @@ p{
 
 	// 	background-position: left top;
 	// 	position: absolute;
-	// 	width: 100vw;
+	// 	width: 100%;
 	// 	height: 100vh;
 	// }
 	.content{
-		width: 100vw;
+		width: 100%;
 		margin: 0;
 		max-width: 0;
 		// max-width: none;
@@ -903,7 +902,7 @@ footer{
 	}
 	ul.menu{
 		display: none;
-		width: 100vw;
+		width: 100%;
 		right: 0;
 		padding: 20px;
 		li{
@@ -931,7 +930,7 @@ footer{
 			align-items: center;
 			padding: 0;
 			height: 100vh;
-			width: 100vw;
+			width: 100%;
 			bottom: 0;
 			background: $cacao;
 			color: $driftwood;
@@ -970,11 +969,11 @@ footer{
 		display: block;
 	}
 	.content-text{
-		width: 100vw;
+		width: 100%;
 		padding: 4rem 2rem;
 	}
 	.content-image{
-		width: 100vw;
+		width: 100%;
 		height: 80vh;
 		background-size: cover;
 		background-attachment: scroll;
